working on call us now section of Fiona pricing. Having spacing issues

--- a/Images/Fiona-style.css
+++ b/Images/Fiona-style.css
@@ -10,6 +10,13 @@ h1 {
 	font-size: 36px;
 	font-weight: lighter;
 }
+h2 {
+	font-family: merryweather;
+	font-size: 24px;
+	color: #1F3740;
+	margin: auto;
+	padding-right: 140px;
+}
 h3 {
 	font-weight: normal;
 	font-size: 24px;
@@ -304,12 +311,14 @@ ul {
 	font-size: 56px;
 	color: #FB9696;
 	text-align: center;
+	margin-bottom: 0;
 }
 .deals__price--opposite {
 	color: white;
 }
 .deals__disclaimer {
 	font-size: 12px;
+	margin-top: 0;
 	color: gray;
 	text-align: center;
 	letter-spacing: 2px;
@@ -327,19 +336,25 @@ ul {
 .deals__book {
 	text-align: center;
 }
-.callNow {
+/*.callNow__text {*/
+	/*font-size: 20px;*/
+	/*font-family: helvetica serif;*/
+	/*color: black;*/
+/*}*/
+.CallNow__logo {
+	width: 40px;
+	height: 40px;
+	color:#FB9696;
+	margin-left: 20px;
+	margin-top: 5px;
+	border-color: #FB9696;
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 40px;
+}
+.callNow__number {
 	text-align: center;
 }
-.callNow__text {
-	font-size: 20px;
-	font-family: helvetica serif;
-	color: black;
-}
-.customersContainer {
-	display: flex;
-	flex-direction: column;
-}
-
 .customers {
 	background-color: #FCF2EB;
 }
@@ -359,5 +374,7 @@ ul {
 	color: gray;
 }
 .customers__quote {
-	align-items: center;
+	display: block;
+	margin: auto;
+	width: 40px;
 }
